<resources>
    <string name="app_name">Kalkulator</string>
    <string name="calculator">Calculator</string>
    <string name="basicButton">Basic</string>
    <string name="advBtn">Advanced</string>
    <string name="aboutMe">About me</string>
    <string name="exitBtn">Exit</string>
    <string name="title_activity_about_me">About Me</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">O mnie</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
